--- a/README
+++ b/README
@@ -1,2 +1,5 @@
 Author: Genesis Rosiles
 Date: 2020-06-16
+
+This respository is for the 2020 SSRP data workshop.
+I will be learning data processing in python.
